    - Add patches/0008_fix_ftbfs_with_gcc-4.6.patch.
  * Fix build without v4l1 (Closes: #623418).
    - Add patches/0009_support_v4lv2_only.patch.
  * Fix build with libpng15.
    - Add patch/0010_fix_ftbs_png15.patch.
  * Fix optimize of i386 (Closes: 629414).
    - Opencv was optimized to i686. This chenged optimization to i486.
    - Add patch/0011_optimize_i486.patch.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Mon, 27 Jun 2011 11:51:39 +0900

opencv (2.1.0-4) unstable; urgency=low

  * Fix install path of opencv-doc (Closes: #610803).
  * Fix FTBFS on gcc-4.5(Closes: #607086, #618045).
    - Add patches/fix_stdint_gcc45.patch 

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 16 Mar 2011 01:55:22 +0900

opencv (2.1.0-3) unstable; urgency=low

  * Fix set opencv minor version on Python (Closes: #600836).

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Tue, 02 Nov 2010 19:55:47 +0900

opencv (2.1.0-2) unstable; urgency=low

  * Update debian/control.
    - Bumped standards-version to 3.9.1. No changes needed.
    - Add python-numpy to Build-depends (Closes: #593310)
  * Add hurd support patch (Closes: #589586).

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 25 Aug 2010 01:49:14 +0900

opencv (2.1.0-1) unstable; urgency=low

  * New upstream release. (Closes: #577594, #587232, #563717)
  * Update debian/rules.
    - Update build-system to debhelper v7.
  * Update debian/control.
    - Bumped standards-version to 3.9.0. No changes needed.
    - library package name update.
      Soname of opencv library changed from 4 to 2.1.
    - Add cmake, liblapack-dev, texlive-fonts-extra, texlive-latex-extra,
      texlive-latex-recommended, latex-xcolor and  texlive-fonts-recommended
      to Build-depends.
    - Add arch depends to libraw1394-dev and libdc1394-22-dev.
      Thanks to Pino Toscano. (Closes: #581210)
  * Add opencv-doc.lintian-overrides.
    opencv-doc has some sample program of python.
  * Update man files.
  * Update patches