@@ -1,9 +1,31 @@
 #!/usr/bin/make -f
 
+CFLAGS := $(shell dpkg-buildflags --get CFLAGS)
+CXXFLAGS := $(shell dpkg-buildflags --get CXXFLAGS)
+LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
+
+DEB_HOST_ARCH  ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+
+# These don't need to be exported and if they are we'll get the flags
+# duplicated in the command line.
+unexport CFLAGS
+unexport CXXFLAGS
+unexport LDFLAGS
+
+ifeq ($(DEB_HOST_ARCH),amd64)
+CMAKE_ARCH_FLAGS = -DENABLE_SSE2=ON
+else
+CMAKE_ARCH_FLAGS = -DENABLE_SSE2=OFF
+endif
+
 CMAKE_FLAGS = \
+	-DCMAKE_INSTALL_PREFIX=/usr \
+	-DCMAKE_VERBOSE_MAKEFILE=ON \
+	-DCMAKE_C_FLAGS_RELEASE="$(CFLAGS)" \
+	-DCMAKE_CXX_FLAGS_RELEASE="$(CXXFLAGS)" \
+	-DCMAKE_SHARED_LINKER_FLAGS_RELEASE="$(LDFLAGS)" \
 	-DCMAKE_BUILD_TYPE=Release	\
 	-DENABLE_SSE=OFF	\
-	-DENABLE_SSE2=OFF	\
 	-DENABLE_SSE3=OFF	\
 	-DENABLE_SSSE3=OFF	\
 	-DUSE_FAST_MATH=ON	\
@@ -44,12 +66,12 @@ override_dh_clean:
 	dh_clean -O--buildsystem=cmake
 
 override_dh_auto_configure:
-	dh_auto_configure -- $(CMAKE_FLAGS)
+	dh_auto_configure -- $(CMAKE_FLAGS) $(CMAKE_ARCH_FLAGS)
 
 override_dh_install:
 	-rm --verbose -rf debian/tmp/usr/share/opencv/samples/octave # just in case
 	-rm --verbose -f debian/tmp/usr/share/opencv/samples/c/cvsample.dsp
-	-rm --verbose -f debian/tmp/usr/share/opencv/doc/opencv-doc/license.txt
+	-rm --verbose -f debian/tmp/usr/share/opencv/doc/license.txt
 	chmod --verbose +x debian/tmp/usr/share/opencv/samples/c/build_all.sh
 	for f in $$(ls obj-*/lib/libopencv_*_s.a); do \
 		cp --verbose --preserve=mode $$f debian/tmp/usr/lib/$$(basename $$f _s.a).a; done
